--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Salaty</title>
+
+    <meta property="og:title" content="Salaty Paryer App" />
+    <meta property="og:description" content="Stay organized with Salaty." />
+    <meta property="og:image" content="/salaty.png" />
+    <meta property="og:url" content="https://prayer-app-two.vercel.app/" />
   </head>
   <body>
     <div id="root"></div>
